<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Open Weather Channel Premium</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>

    <string name="map_key" translatable="false">AIzaSyApU0QQDvaOSmaFAW4NDvWZ-mOBGSYXGZo</string>


    <!-- translatable words and expressions -->
    <string name="daily_forecast">Daily forecast</string>
    <string name="hourly_forecast">Hourly forecast</string>
    <string name="wind_forecast">Wind forecast</string>
    <string name="duration_of_the_day">Duration of the day:</string>


    <!-- translatable words and expressions for current item -->
    <string name="feels_like">Feels like</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="morning">Morning</string>
    <string name="evening">Afternoon</string>
    <string name="night">Night</string>
    <string name="uv_index">UV index</string>


    <!-- aspects of the horizon -->
    <string name="N">from N</string>
    <string name="NE">from NE</string>
    <string name="E">from E</string>
    <string name="SE">from SE</string>
    <string name="S">from S</string>
    <string name="SW">from SW</string>
    <string name="W">from W</string>
    <string name="NW">from NW</string>

    <!-- speed value km/h and m/sec -->
    <string name="km_h">km/h</string>
    <string name="m_sec">m/sec</string>

    <!-- wind situation according to wind speed -->
    <string name="calm">Calm</string>
    <string name="light_air">Light air</string>
    <string name="light_breeze">Light breeze</string>
    <string name="gentle_wind">Gentle wind</string>
    <string name="moderate_wind">Moderate wind</string>
    <string name="fresh_breeze">Fresh breeze</string>
    <string name="strong_wind">Strong wind</string>
    <string name="high_wind">High wind</string>
    <string name="gale">Gale</string>
    <string name="severe_gale">Severe gale</string>
    <string name="strong_storm">Strong storm</string>
    <string name="violent_storm">Violent storm</string>
    <string name="hurricane_force">Hurricane force</string>


    <!-- aspects of the horizon according to degree for wind -->
    <string name="w_N">N</string>
    <string name="w_NE">NE</string>
    <string name="w_E">E</string>
    <string name="w_SE">SE</string>
    <string name="w_S">S</string>
    <string name="w_SW">SW</string>
    <string name="w_W">W</string>
    <string name="w_NW">NW</string>

    <!-- widgets items -->
    <string name="wind_speed">Wind speed</string>
    <string name="hour">h</string>
    <string name="minute">m</string>

    <!-- drawer layout items -->
    <string name="add_new_location">Add new location</string>
    <string name="delete_location">Delete location</string>
    <string name="my_location">My location</string>
    <string name="settings">Settings</string>
    <string name="about_the_application">About the application</string>
    <string name="contact_us">Contact us</string>
    <string name="premium">Premium</string>

    <!-- the items of settings page in drawer layout -->
    <string name="temprature_settings">Temperature settings</string>
    <string name="wind_speed_settings">Wind speed settings</string>
    <string name="notification">Notification</string>
    <string name="languages">Languages</string>
    <string name="celcius_and_fahrenheit">Celsius and Fahrenheit</string>
    <string name="m_km_h">m/sec and km/h</string>
    <string name="langauges_choices">English, Azerbaijani, Arabic, German, Russian, Turkish</string>
    <string name="required_android_level">Required: notification is only work in Android 8 and higher and this skill risk your program</string>


    <!-- dialog words -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="fahrenheit">Fahrenheit (°F)</string>
    <string name="celsius">Celsius (°C)</string>

    <!-- about the application words and sentences -->
    <string name="about_program">Open Weather Channel provides you some accurate and absolutely right informations: daily, hourly, current and wind(3 hourly) !</string>
    <string name="created_program">Created in 2020, Azerbaijan</string>
    <string name="version">Version: 8.0.13</string>

    <!-- contact us words and sentences -->
    <string name="txt_contact_us">• If you have problems with program, click on the email link below and send an email about program</string>
    <string name="openweathermap">• If you have problems such as service and data delays, click on the link below and send an email about it</string>

    <!-- languages -->
    <string name="english">English</string>
    <string name="azerbaijani">Azerbaijani</string>
    <string name="german">German</string>
    <string name="turkish">Turkish</string>
    <string name="russian">Russian</string>
    <string name="arabic">Arabic</string>
    <string name="languages_options">Language Options</string>

    <!-- default toast messages -->
    <string name="check_connection">Check your internet connection !</string>
    <string name="cant_delete_location">You can not delete last locaiton !</string>

    <!-- add new location -->
    <string name="only_city_name">city name</string>
    <string name="write_location">Write only city name and tap to find button !</string>
    <string name="must_location">You must write a location !</string>

    <!-- onCreateOptionMenu -->
    <string name="help">Help</string>


</resources>