<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawerLayoutItems.Settings">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar_for_settings">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backArrowForSettings"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_settings"
                android:layout_toRightOf="@+id/backArrowForSettings"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:text="@string/settings"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textStyle="bold"/>


        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/rel_time_units_settings"
        android:layout_below="@+id/toolbar_for_settings"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/temprature_settings"
            android:id="@+id/temprature_settings"/>

        <TextView
            android:id="@+id/temprature_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_below="@+id/temprature_settings"
            android:text="@string/celcius_and_fahrenheit"
            android:textStyle="italic"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/rel_wind_units"
        android:layout_below="@+id/rel_time_units_settings"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/wind_speed_settings"
            android:id="@+id/wind_speed_settings"/>

        <TextView
            android:id="@+id/wind_speed_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_below="@+id/wind_speed_settings"
            android:text="@string/m_km_h"
            android:textStyle="italic"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/rel_notification_settings"
        android:layout_below="@+id/rel_wind_units"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/notification" />

        <TextView
            android:id="@+id/required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_below="@+id/notification_switch"
            android:text="@string/required_android_level"
            android:textStyle="italic"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel_about_application"
        android:layout_below="@+id/rel_notification_settings"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/languages"
            android:id="@+id/languages"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/languagesSpinner"/>

    </RelativeLayout>


</RelativeLayout>